--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Demo Website Index Page</title>
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Google Tag Manager -->
+   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5CJSFNRT');</script>
+    })(window,document,'script','dataLayer','GTM-KRZRGV2W');</script>
     <!-- End Google Tag Manager -->
+
 </head>
 
 <body>
@@ -36,11 +37,10 @@
     </header>
 
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5CJSFNRT"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRZRGV2W"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-    <!-- body -->
     <section class="container">
         <div class="hero">
             <div class="hero__text">
