--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
 
         <div class="nav__items">
             <ul>
-                <li><a href="https://adharshscipy.github.io/DM-website/index.html">Home</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/about.html">About</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/service.html">Services</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/contact.html" class="active">Contact</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/index.html">Home</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/about.html">About</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/service.html">Services</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/contact.html" class="active">Contact</a></li>
             </ul>
         </div>
     </header>
