--- a/service.html
+++ b/service.html
@@ -18,10 +18,10 @@
 
         <div class="nav__items">
             <ul>
-                <li><a href="https://adharshscipy.github.io/DM-website/index.html">Home</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/about.html">About</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/service.html" class="active">Services</a></li>
-                <li><a href="https://adharshscipy.github.io/DM-website/contact.html">Contact</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/index.html">Home</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/about.html">About</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/service.html" class="active">Services</a></li>
+                <li><a href="https://jishnusajeev12345.github.io/My-Portfolio-Website/contact.html">Contact</a></li>
             </ul>
         </div>
     </header>
