--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Best seo expert in ernakulam.">
+    <meta name="keywords" content="best seo strategist in ernakulam, seo">
+    <meta name="author" content="Jishnu">
+
     <title>Demo Website Index Page</title>
     <link rel="stylesheet" href="styles.css">
 
