--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="best seo strategist in ernakulam, seo">
     <meta name="author" content="Jishnu">
 
-    <title>Demo Website Index Page</title>
+    <title> SEO Specialist</title>
     <link rel="stylesheet" href="styles.css">
 
 <!-- Google tag (gtag.js) -->
